--- a/src/Nanophone.RegistryTenant.WebApi/project.json
+++ b/src/Nanophone.RegistryTenant.WebApi/project.json
@@ -1,12 +1,29 @@
 ﻿{
   "title": "Nanophone.RegistryTenant.WebApi",
-  "version": "1.0.0-*",
+  "version": "1.0.0",
+  "authors": [ "Luk Vermeulen" ],
+  "copyright": "Copyright 2016",
+  "description": "Nanophone Web Api registry tenant",
 
   "buildOptions": {
     "define": [ "LIBLOG_PORTABLE" ],
     "optimize": true,
     "outputName": "Nanophone.RegistryTenant.WebApi",
     "xmlDoc": false
+  },
+
+  "packOptions": {
+    "owners": [ "Luk Vermeulen" ],
+    "requireLicenseAcceptance": true,
+    "summary": "Nanophone Web Api registry tenant",
+    "tags": [ "Service", "Discovery", "ServiceDiscovery", "Consul", "Nancy", "WebApi", "Healing", "Autohealing", "Microservices" ],
+    "projectUrl": "https://github.com/lvermeulen/Nanophone",
+    "licenseUrl": "https://github.com/lvermeulen/Nanophone/blob/master/LICENSE",
+    "iconUrl": "http://i.imgur.com/WnKfKOC.png?1",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/lvermeulen/Nanophone"
+    }
   },
 
   "dependencies": {
