--- a/src/Nanophone.RegistryTenant.Nancy/project.json
+++ b/src/Nanophone.RegistryTenant.Nancy/project.json
@@ -37,16 +37,8 @@
     "netstandard1.6": {
       "dependencies": {
         "NETStandard.Library": "1.6.0",
-        "System.Diagnostics.StackTrace": "4.0.1",
-        "System.Linq.Queryable": "4.0.1",
-        "System.Collections.Specialized": "4.0.1",
-        "System.ComponentModel.TypeConverter": "4.1.0",
         "System.Dynamic.Runtime": "4.0.11",
-        "Microsoft.CSharp": "4.0.1",
-        "System.Runtime.InteropServices.RuntimeInformation": "4.0.0",
-        "System.Diagnostics.Tools": "4.0.1",
-        "System.Linq.Expressions": "4.1.0",
-        "System.Text.RegularExpressions": "4.1.0"
+        "Microsoft.CSharp": "4.0.1"
       }
     }
   }
