--- a/src/Nanophone.RegistryHost.ConsulRegistry/project.json
+++ b/src/Nanophone.RegistryHost.ConsulRegistry/project.json
@@ -27,13 +27,13 @@
   },
 
   "dependencies": {
+    "Consul": "0.6.4.8-alpha2",
     "Nanophone.Core": { "target": "project" }
   },
 
   "frameworks": {
     "net451": {
       "dependencies": {
-        "Consul": "0.6.4.7",
         "Newtonsoft.Json": "9.0.1"
       }
     },
@@ -41,8 +41,7 @@
       "dependencies": {
         "NETStandard.Library": "1.6.0",
         "System.Dynamic.Runtime": "4.0.11",
-        "Microsoft.CSharp": "4.0.1",
-        "Consul": "0.6.4.8-alpha2"
+        "Microsoft.CSharp": "4.0.1"
       }
     }
   }
